correct z-index bug

--- a/style.css
+++ b/style.css
@@ -103,16 +103,19 @@ svg{
 
 /* text styles */
 .subtitle{
-   
+    display:block;
+    background-color: var(--titletextbox);
+    border-radius: 2em;
+    margin: 2rem 0;
+    padding: 0.25rem 1.5em;
 }
 h2{
     font-family: 'Gaegu', cursive;
     color:var(--headertext);
     font-size: 2vw;
-    background-color: var(--titletextbox);
-    padding: 0.75rem 1em;
-    border-radius: 2em;
-    z-index: 2;
+    margin:0;
+    position:relative;
+    z-index: 1;
 }
 #title, #title2{
     font-weight: normal;
@@ -122,6 +125,7 @@ h2{
     margin: 0;
     transform: rotateZ(-5deg);
     text-shadow: 4px 4px #82463050;
+    z-index: 1;
 }
 #title{
     color: var(--headertext);
@@ -155,8 +159,7 @@ h2{
     transform: rotateZ(25deg);
 }
 #maple{
-    z-index: 1;
-    background-color: blue;
+    transform: rotateZ(-40deg);
 }
 
 .popin{
